# DanCoreN

./: Cargo.toml  README.md
dan_core_n_viewer/: Cargo.toml
dan_core_n_viewer/src/: lib.rs  main.rs
src/: color.rs  form.rs  lib.rs
src/behavior/: columns.rs  danmaku_data.rs  handlers.rs  main_columns.rs  mod.rs  standard_behaviors.rs
src/danmaku/: data.rs  handlers.rs  mod.rs
src/danmaku/standard/: behaviors.rs  mod.rs
